<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.constructing_view_layouts.ConstraintLayoutActivity">

    <TextView
        android:id="@+id/textViewHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_1"
        app:layout_constraintEnd_toStartOf="@id/textViewSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHeadline" />

    <TextView
        android:id="@+id/textViewSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_2"
        app:layout_constraintEnd_toStartOf="@id/textViewThird"
        app:layout_constraintStart_toEndOf="@id/textViewFirst"
        app:layout_constraintTop_toBottomOf="@id/textViewHeadline" />

    <TextView
        android:id="@+id/textViewThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewSecond"
        app:layout_constraintTop_toBottomOf="@id/textViewHeadline" />

    <TextView
        android:id="@+id/textViewFourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_4"
        app:layout_constraintStart_toStartOf="@id/textViewThird"
        app:layout_constraintTop_toBottomOf="@id/textViewThird" />

    <Button
        android:id="@+id/buttonNextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_layout_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFourth" />

</androidx.constraintlayout.widget.ConstraintLayout>